Adição do mongoskin, jquery e mockup de front

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,10 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  div.creator
+    h1 Novo teste comportamental
+    h2 Dado que estou blablalbal
+    h2 Dado que estou blablalbal
+    h2 Dado que estou blablalbal
+    h2 Dado que estou blablalbal
+    h2 Dado que estou blablalbal
