--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,3 +5,4 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    script(type='javascriot', src='/javascripts/jquery-2.1.4.min.js')
