--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/css/materialize.min.css')
     link(rel='stylesheet', href='/css/style.css')
-    meta(name='viewport', 
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
   body
     .container
       block content
