Fix nas fontes, front do Create Scenario, javascript de adicionar step

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,9 +4,12 @@ html
     title= title
     link(rel='stylesheet', href='/css/materialize.min.css')
     link(rel='stylesheet', href='/css/style.css')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
   body
     .container
       block content
-    script(type='javascript', src='/js/jquery-2.1.4.min.js')
-    script(type='javascript', src='/js/materialize.min.js')
+    script(type='text/javascript', src='/js/jquery-2.1.4.min.js')
+    script(type='text/javascript', src='/js/materialize.min.js')
+    script(type='text/javascript', src='/js/app.js')
+    script(type='text/javascript', src='/js/create.js')
