--- a/views/index.jade
+++ b/views/index.jade
@@ -17,8 +17,8 @@ block content
         +step-input
       .actions
         .row
-          a.waves-effect.waves-light.btn-large.col.s3.blue.disabled Exportar para Jira
-          a.waves-effect.waves-light.btn-large.col.offset-s1.s3.blue.disabled Exportar para Behat
+          a.exporter.waves-effect.waves-light.btn-large.col.s3.blue.disabled Exportar para Jira
+          a.exporter.waves-effect.waves-light.btn-large.col.offset-s1.s3.blue.disabled Exportar para Behat
           a#save-scenario.waves-effect.waves-light.btn-large.col.offset-s1.s4.green Salvar
 
 mixin step-input
