--- a/views/scenario/add.jade
+++ b/views/scenario/add.jade
@@ -1,19 +1,26 @@
-extends layout
+extends ../layout
 
 block content
   div.creator.row
     div.col.s12
-      h1 Novo Cenário
+      if scenario
+        h1 Editar Cenário
+        input(type='hidden', name='scenario_id', id='scenario_id', value=scenario._id)
+      else
+        h1 Novo Cenário
       .row
         .input-field.col.s6
-          input(type='text', class='validate', id='scenario-name', name='scenario-name')
+          input(type='text', class='validate', id='scenario-name', name='scenario-name', value=(scenario) ? scenario.name : "")
           label(for='scenario-name') Nome:
         .input-field.col.s6
-          input(type='text', class='validate', id='jira-id', name='jira-id')
+          input(type='text', class='validate', id='jira-id', name='jira-id', value=(scenario) ? scenario.name : "")
           label(for='jira-id') Jira ID:
 
       .steps
         +step-input()(class='model')
+        if scenario && scenario.steps
+          each step in scenario.steps
+            +step-input(moment=step.moment, action=step.action)
         +step-input
       .actions
         .row
@@ -25,12 +32,14 @@ mixin step-input
   .row.step&attributes(attributes)
     .input-field.col.s4
       select
-        option(value='given') Given
-        option(value='given') Then
-        option(value='given') Shiet
+        each item in moments
+          if item.en !== moment
+            option(value='#{item.en}')= item.br
+          else
+            option(value='#{item.en}', selected)= item.br
       label Momento
     .input-field.col.s7
-      input(type='text', class='validate step-action', name='step-action')
+      input(type='text', class='validate step-action', name='step-action', value=action || "")
       label(for='step-action') Ação
     .input-field.col.s1
       .btn-floating.btn-large.waves-effec.waves-light.green
