--- a/views/scenario/add.jade
+++ b/views/scenario/add.jade
@@ -5,7 +5,7 @@ block content
     div.col.s12
       if scenario
         h1 Editar Cenário
-        input(type='hidden', name='scenario_id', id='scenario_id', value=scenario._id)
+        input(type='hidden', name='scenario-id', id='scenario-id', value=scenario._id)
       else
         h1 Novo Cenário
       .row
@@ -13,7 +13,7 @@ block content
           input(type='text', class='validate', id='scenario-name', name='scenario-name', value=(scenario) ? scenario.name : "")
           label(for='scenario-name') Nome:
         .input-field.col.s6
-          input(type='text', class='validate', id='jira-id', name='jira-id', value=(scenario) ? scenario.name : "")
+          input(type='text', class='validate', id='jira-id', name='jira-id', value=(scenario) ? scenario.jiraId : "")
           label(for='jira-id') Jira ID:
 
       .steps
