--- a/views/scenario/add.jade
+++ b/views/scenario/add.jade
@@ -26,18 +26,22 @@ block content
           i.material-icons.action-button.add-step add
       .actions
         .row
-          a.exporter.waves-effect.waves-light.btn-large.col.s3.blue.disabled.modal-trigger(href="#jiraExport", data-toggle="modal") Exportar para Jira
-          a.exporter.waves-effect.waves-light.btn-large.col.offset-s1.s3.blue.disabled Exportar para Behat
+          a.exporter.waves-effect.waves-light.btn-large.col.s3.blue.disabled.modal-trigger(href="#jira-export", data-toggle="modal") Exportar para Jira
+          a.exporter.waves-effect.waves-light.btn-large.col.offset-s1.s3.blue.disabled.modal-trigger(href="#behat-export", data-toggle="modal") Exportar para Behat
           a#save-scenario.waves-effect.waves-light.btn-large.col.offset-s1.s4.green Salvar
 
 
-  div#jiraExport.modal.modal-fixed-footer
+  div#behat-export.modal.modal-fixed-footer
     .modal-dialog
       .modal-content
-        .modal-header
-          button.close(type='button', data-dismiss='modal') x (NÃO FUNFA - CLIQUE FORA)
         .modal-body
-          span RESULTADO AQUI!
+          textarea.materialize-textarea#behat-export-contents
+
+  div#jira-export.modal.modal-fixed-footer
+    .modal-dialog
+      .modal-content
+        .modal-body
+          textarea.materialize-textarea#jira-export-contents
 
 
 mixin step-input(moment, action)
