json no modal jira

--- a/views/scenario/add.jade
+++ b/views/scenario/add.jade
@@ -21,13 +21,15 @@ block content
         if scenario && scenario.steps
           each step in scenario.steps
             +step-input(step.moment, step.action)
+        else if !scenario
+          +step-input("a", "a")
       .more
         .btn-floating.btn-large.waves-effec.waves-light.green.center-align
           i.material-icons.action-button.add-step add
       .actions
         .row
-          a.exporter.waves-effect.waves-light.btn-large.col.s3.blue.disabled.modal-trigger(href="#jira-export", data-toggle="modal") Exportar para Jira
-          a.exporter.waves-effect.waves-light.btn-large.col.offset-s1.s3.blue.disabled.modal-trigger(href="#behat-export", data-toggle="modal") Exportar para Behat
+          a.exporter.waves-effect.waves-light.btn-large.col.s3.blue.modal-trigger(href="#jira-export", data-toggle="modal", class=(!scenario) ? "disabled" : "")  Exportar para Jira
+          a.exporter.waves-effect.waves-light.btn-large.col.offset-s1.s3.blue.modal-trigger(href="#behat-export", data-toggle="modal", class=(!scenario) ? "disabled" : "") Exportar para Behat
           a#save-scenario.waves-effect.waves-light.btn-large.col.offset-s1.s4.green Salvar
 
 
@@ -48,11 +50,12 @@ mixin step-input(moment, action)
   .row.step&attributes(attributes)
     .input-field.col.s4
       select
-        each item in moments
-          if item.en !== moment
-            option(value='#{item.en}')= item.br
-          else
-            option(value='#{item.en}', selected)= item.br
+        if moments
+          each item in moments
+            if item.en !== moment
+              option(value='#{item.en}')= item.br
+            else
+              option(value='#{item.en}', selected)= item.br
       label Momento
     .input-field.col.s7
       input(type='text', class='validate step-action', name='step-action', value=action || "")
