--- a/views/scenario/list.jade
+++ b/views/scenario/list.jade
@@ -7,13 +7,14 @@ block content
 
     .row
       div.col.s12.input-field
-        select.filter
+        select.filter.filter-team
           option(value='') Escolha um time
           option(value='fvc') FVC
-          option(value='abril') ABRIL
+          option(value='abr') ABRIL
           option(value='just') JUST
+          option(value='asd') ASD
     
-        label Materialize Select
+        label Filtro por time:
 
     .row
     ul.collection.with-heade
