--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,13 +7,13 @@ html
     link(rel='stylesheet', href='/css/materialize.min.css')
     link(rel='stylesheet', href='/css/style.css')
   body
-
     nav
-      div.nav-wrapper
-        a.brand-logo(href='/') BTM
+      .nav-wrapper
+        a.brand-logo(href='/')
+          i.large.material-icons insert_chart
         ul#nav-mobile.right.hide-on-med-and-down
           li 
-            a(href="/scenario/add") Criar BDD
+            a(href="/scenario/add") Criar teste comportamental
           li
             a(href="/") Listar todos
 
