--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -6,6 +6,9 @@
   margin: 0 auto 20px auto
 
 .modal-body.exporter
-  height: 80%
   textarea
-    height: 100%
+    height: 250px
+
+.brand-logo
+  i.material-icons
+    font-size: 57px
